rust/surrealdb-orm-tests/src/snapshots/surrealdb_macros__query_define_table__tests__define_for_statement_state_machine.snap
---
source: surrealdb-macros/src/query_define_table.rs
expression: for_res
---
FOR create
	WHERE name ~ $_param_00000000
