rust/surrealdb-orm-tests/src/snapshots/surrealdb_macros__query_define_table__tests__define_statement_schemaless.snap
---
source: surrealdb-macros/src/query_define_table.rs
expression: statement
---
DEFINE TABLE user SCHEMALESS PERMISSIONS FULL;
