rust/surrealdb-orm-tests/src/snapshots/surrealdb_macros__query_define_table__tests__define_statement_state_machine_multiple.snap
---
source: surrealdb-macros/src/query_define_table.rs
expression: statement
---
DEFINE TABLE user DROP SCHEMAFULL
PERMISSIONS
FOR select
	WHERE age >= $_param_00000000
FOR create, delete
	WHERE name IS $_param_00000000
FOR create, delete
	WHERE name IS $_param_00000000
FOR update
	WHERE age <= $_param_00000000
;
